--- a/Sentiment_classification_Using_Bert.ipynb
+++ b/Sentiment_classification_Using_Bert.ipynb
@@ -1410,7 +1410,7 @@
       "cell_type": "code",
       "source": [
         "## Imorting Dataset\n",
-        "df = pd.read_csv('https://github.com/clairett/pytorch-sentiment-classification/raw/master/data/SST2/train.tsv', delimiter='\\t', header=None)\n",
+        "df = pd.read_csv('dataset/train.tsv', delimiter='\\t', header=None)\n",
         "df1 = df[:2000]\n"
       ],
       "metadata": {
